2012-08-08  Corinna Vinschen  <vinschen@redhat.com>

	* configure.ac: Fix default to --enable-w32api=no in previous patch.
	* configure: Regenerate.

2012-08-07  Corinna Vinschen  <vinschen@redhat.com>

	* configure.ac: Replace --enable-startup with --enable-w32api option.
	(LIB64SUFFIXDIR, LIB32SUFFIXDIR): Conditionalize on enable_w32api.
	* Makefile.am: Replace STARTUP conditions with W32API conditions.
	Drop libraries depending on W32API.
	(libsrcdir): Set to includedir.
	* configure: Regenerate.
	* Makefile.in: Regenerate.

2012-08-07  Kai Tietz  <ktietz@redhat.com>

	* secapi/wmemcpy_s.c: New file.
	* secapi/memcpy_s.c: New file.
	* secapi/_strdate_s.c: New file.
	* secapi/_wstrdate_s.c: New file.
	* secapi/_strtime_s.c: New file.
	* secapi/_wstrtime_s.c: New file.
	* secapi/_gmtime64_s.c: New file.
	* secapi/_gmtime32_s.c: New file.
	* secapi/_localtime32_s.c: New file.
	* secapi/_localtime64_s.c: New file.
	* secapi/_ctime64_s.c: New file.
	* secapi/_wctime64_s.c: New file.
	* Makefile.am: Add new files.
	* Makefile.in: Regenerated.
	* lib32/msvcrt.def: Commented symbols.
	* lib64/msvcrt.def: Likewise.

2012-08-03  Kai Tietz  <ktietz@redhat.com>

	* secapi/asctime_s.c: New file.
	* secapi/_wasctime_s.c: New file.
	* secapi/_wctime32_s.c: New file.
	* secapi/_ctime32_s.c: New file.
	* Makefile.am: Add new files.
        * Makefile.in: Regenerated.
	* lib32/msvcrt.def: Commented symbols.
	* lib64/msvcrt.def: Likewise.

2012-08-01  Kai Tietz  <ktietz@redhat.com>

	* secapi/_umask_s.c: New file.
	* secapi/_chsize_s.c: New file.
	* secapi/_mktemp_s.c: New file.
	* secapi/_wmktemp_s.c: New file.
	* secapi/_wassert_s.c: New file.
	* secapi/_assert_s.c: New file.
	* secapi/_cwprintf_s.c: New file.
	* secapi/_cwprintf_s_l.c: New file.
	* secapi/_vcwprintf_s.c: New file.
	* secapi/_vcwprintf_s_l.c: New file.
	* secapi/_vcprintf_s.c: New file.
	* secapi/_vcprintf_s_l.c: New file.
	* secapi/_cprintf_s_l.c: New file.
	* Makefile.am: Add new file.