@@ -1,3 +1,7 @@
+2012-08-08  Kai Tietz  <ktietz@redhat.com>
+
+	* gdtoa/dg_qnan.h: Make Nan constants positive valued.
+
 2012-08-08  Corinna Vinschen  <vinschen@redhat.com>
 
 	* configure.ac: Fix default to --enable-w32api=no in previous patch.
